--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,6 +80,11 @@ ul{
 
 
  */
+
+ #userbutton{
+background-color: darkgrey;
+color: white;
+ }
  .contact form #button2, .contact form input, .contact form textarea{
 
    padding:1em;
